--- a/ProjectTracker.xcodeproj/xcshareddata/xcschemes/ProjectTracker.xcscheme
+++ b/ProjectTracker.xcodeproj/xcshareddata/xcschemes/ProjectTracker.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "298C7D5E28B87C9C00CB8DC8"
+            BuildableName = "ProjectTracker.app"
+            BlueprintName = "ProjectTracker"
+            ReferencedContainer = "container:ProjectTracker.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "29DA347B28C664B500FD11F9"
+               BuildableName = "ProjectTrackerTests.xctest"
+               BlueprintName = "ProjectTrackerTests"
+               ReferencedContainer = "container:ProjectTracker.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
